--- a/sgejs/src/main/webapp/views/servidores/formulario.html
+++ b/sgejs/src/main/webapp/views/servidores/formulario.html
@@ -5,7 +5,7 @@ and open the template in the editor.
 -->
 <div class="button-group padding5 no-padding-left" style="height: 10%!important">
     <button ng-disabled="form_servidor.$invalid" class="button" ng-click='salvarServidor()'><span class="mif-floppy-disk"></span> Salvar</button>
-    <a class="button" href="#/"><span class="mif-cancel"></span> Cancelar</a>
+    <a class="button" ui-sref="home"><span class="mif-cancel"></span> Cancelar</a>
     <button class="button"><span class="mif-bin"></span> Remover</button>
 </div>
 
