--- a/sgejs/src/main/webapp/views/servidores/componentes/dadospessoais.html
+++ b/sgejs/src/main/webapp/views/servidores/componentes/dadospessoais.html
@@ -3,7 +3,6 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<h4>Dados Pessoais</h4>
 <div class="row cell-auto-size">
     <div class="cell padding10">
         <label>* Nome</label>
@@ -12,7 +11,7 @@ and open the template in the editor.
         </div>
     </div>
     <div class="cell padding10 size2">
-        <label>* Data de Nascimento</label>
+        <label>* Nascimento</label>
         <div class="input-control text full-size" data-role="datepicker">
             <input type="text" ng-model="servidor.nascimento" required/>
             <button class="button"><span class="mif-calendar"></span></button>
@@ -24,8 +23,8 @@ and open the template in the editor.
             <input type="text" ng-model="servidor.cidadeNascimento" required/>
         </div>
     </div>
-    <div class="cell padding10 size2">
-        <label>* Estado de Nascimento</label>
+    <div class="cell padding10 size1">
+        <label>* Estado</label>
         <div class="input-control select full-size">
             <select ng-model="servidor.ufNascimento" required>
                 <option></option>
