--- a/sgejs/src/main/webapp/views/servidores/componentes/ctps.html
+++ b/sgejs/src/main/webapp/views/servidores/componentes/ctps.html
@@ -3,7 +3,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<h4>Carteira de Trabalho</h4>
+<h4 class="text-light">Carteira de Trabalho</h4>
 <input hidden ng-model="servidor.documento.ctps.id"/>
 <div class="row cell-auto-size">
     <div class="cell padding10">
