--- a/sgejs/src/main/webapp/views/servidores/componentes/reservista.html
+++ b/sgejs/src/main/webapp/views/servidores/componentes/reservista.html
@@ -1,7 +1,7 @@
 
 <div class="row cell-auto-size">
     <div class="cell">
-        <h4>CPF</h4>
+        <h4 class="text-light">CPF</h4>
         <div class="row cell-auto-size">
             <div class="cell padding10">
                 <label>Número</label>
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div class="cell">
-        <h4>Documento Militar (Somente para Sexo Masculino)</h4>
+        <h4 class="text-light">Documento Militar (Somente para Sexo Masculino)</h4>
         <input hidden ng-model="servidor.documento.reservista.id"/>
         <div class="row cell-auto-size">
             <div class="cell padding10">
